# crefl

./: CMakeLists.txt  README.md
cmake/: crefl_macro.cmake
data/: README.md
docs/: vf128-example-1.tex  vf128.md
include/crefl/: asn1.h  bits.h  buf.h  db.h  dump.h  endian.h  hashmap.h  link.h  model.h  oid.h  types.h  util.h
samples/: example1.c
samples/example1_file/: main.c
samples/example2_embed/: main.c
samples/example3_printer/: main.c  printer.c  printer.h
scripts/: ISO-6093-NR3.pl  creflcc.py  parse_oids.py  run-all-tests.sh  run-test.sh  run_tests.py
src/: asn1.cc  buf.cc  casn1.cc  casn1.h  cbits.h  cbuf.cc  cbuf.h  cdump.cc  cdump.h  cfileio.cc  cfileio.h  clink.cc  clink.h  cmodel.cc  cmodel.h  coid.cc  coid.h  creflect.cc  creflect.h  ctypes.cc  ctypes.h  cutil.h  db.cc  dump.cc  link.cc  model.cc  oid.cc  reflect.cc  reflect.h  sha256.c  sha256.cc  sha256.h  stdbits.h  stdendian.h  types.cc
test/: adjacent-decls-1.h  adjacent-decls-3.h  adjacent-structs-1.h  array-struct-1.h  array-struct-2.h  attribute-alias-1.h  attribute-function-3.h  attribute-unused-result-1.h  bench_asn1.cc  complex-2.h  complex-quad-1.h  cv-qualifier-1.h  doubly-nested-struct-2.h  empty-enum-1.h  h1.h  h2.h  misc-decls-1.h  nested-empty-struct-1.h  nested-empty-struct-2.h  nested-enum-1.h  nested-enum-2.h  nested-named-struct-1.h  nested-named-struct-2.h  nested-struct-1.h  rand_vf128.cc  simple-enum-2.h  simple-typedef-2.h  simple-typedef-3.h  struct-array-enum-1.h  struct-array-enum-2.hpp  struct-enum-1.h  struct-method-1.hpp  struct-pointer-1.h  struct-with-array-1.h  t1.c  t2.c  t3.c  t4.c  t5.c  t6.c  (+2 more)
test/input/: array-param-unspec-1.h  array-param-variable-1.h  array-param-zero-1.h  array-struct-1.h  attribute-always-inline-1.h  attribute-annotate-1.h  attribute-annotate-2.h  attribute-deprecated-1.h  attribute-variable-1.h  bitfield-struct-1.h  complex-float-1.h  cv-qualifier-2.h  dedup-struct-1.h  dedup-struct-2.h  empty-struct-1.h  forward-struct-1.h  forward-struct-2.h  function-inline-1.h  function-qualifiers-1.h  function-qualifiers-1.hpp  nested-anon-struct-2.h  nested-anon-struct-3.h  nested-empty-struct-2.h  nested-enum-3.h  nested-named-struct-3.h  pointer-to-array-1.h  pointer-to-array-2.h  pointer-to-array-3.h  simple-enum-1.h  simple-struct-1.h  simple-struct-2.h  simple-typedef-1.h  static-array-param-1.h  static-function-1.h  static-member-function-1.hpp  static-struct-var-1.h  variable-qualifiers-1.h  variable-qualifiers-1.hpp
tool/: asn1tool.cc  crefltool.cc
